--- a/.github/workflows/ecs-deployment.yaml
+++ b/.github/workflows/ecs-deployment.yaml
@@ -73,7 +73,7 @@ jobs:
     
     - name: Download task definition
       run: |
-        aws ecs describe-task-definition --task-definition hello-world \
+        aws ecs describe-task-definition --task-definition hello-world:2 \
         --query taskDefinition > task-definition.json
 
     
