feat: update ecs cluster

--- a/.github/workflows/ecs-deployment.yaml
+++ b/.github/workflows/ecs-deployment.yaml
@@ -15,7 +15,7 @@ env:
   AWS_REGION: eu-west-2                                                                  # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: ecs-hello-world           # set this to your Amazon ECR repository name
   ECS_SERVICE: hello-world-cluster                                                       # set this to your Amazon ECS service name
-  ECS_CLUSTER: hello-world                                                               # set this to your Amazon ECS cluster name
+  ECS_CLUSTER: hello-world-cluster                                                               # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: hello-world:2                                                     # set this to the path to your Amazon ECS task definition
   CONTAINER_NAME: hello-world
 
